--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ body, html {
 
 /* Second image (Portfolio) */
 .bgimg-2 {
-    background-image: url("_MG_9824.JPG");
+    background-image: url("pp.JPG");
     min-height: 400px;
 }
 
