--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ body, html {
 /* Second image (Portfolio) */
 .bgimg-2 {
     background-image: url("pp.JPG");
-    min-height: 400px;
+    min-height: 100%;
 }
 
 /* Third image (Contact) */
