--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@ body, html {
     <i class="fa fa-twitter w3-hover-opacity"></i>
     <i class="fa fa-linkedin w3-hover-opacity"></i>
   </div>
-  //<p>Powered by <a href="https://www.dimasayuti.com" title="dimasayuti" target="_blank" class="w3-hover-text-green">dimasayuti</a></p>
+  <p>Powered by <a href="https://www.dimasayuti.com" title="dimasayuti" target="_blank" class="w3-hover-text-green">dimasayuti</a></p>
 </footer>
  
 <!-- Add Google Maps -->
