--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@ function toggleFunction() {
     }
 }
 </script>
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBu-916DdpKAjTmJNIgngS6HL_kDIKU0aU&callback=myMap"></script>
+<script src="https://maps.google.com/maps/ms?ie=UTF8&hl=en&msa=0&msid=107285729505224596460.0004655827930f8aa50fe&ll=-7.976618,112.633209&spn=0,0&t=h&source=embed"></script>
 
 
 </body>
