--- a/index.html
+++ b/index.html
@@ -215,9 +215,9 @@ body, html {
     </div>
     <div class="w3-col m8 w3-panel">
       <div class="w3-large w3-margin-bottom">
-        <i class="fa fa-map-marker fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i> Chicago, US<br>
-        <i class="fa fa-phone fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i> Phone: +00 151515<br>
-        <i class="fa fa-envelope fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i> Email: mail@mail.com<br>
+        <i class="fa fa-map-marker fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i> Malang, Indonesia<br>
+        <i class="fa fa-phone fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i> Phone: +6287861622620<br>
+        <i class="fa fa-envelope fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i> Email: sayuti.dimas11@mail.com<br>
       </div>
       <p>Swing by for a cup of <i class="fa fa-coffee"></i>, or leave me a note:</p>
       <form action="/action_page.php" target="_blank">
@@ -299,7 +299,7 @@ function toggleFunction() {
     }
 }
 </script>
-<script src="https://maps.google.com/maps/ms?ie=UTF8&hl=en&msa=0&msid=107285729505224596460.0004655827930f8aa50fe&ll=-7.976618,112.633209&spn=0,0&t=h&source=embed"></script>
+<script src="https://www.google.co.id/maps/place/Malang,+Malang+City,+East+Java,+Indonesia/@-7.9786395,112.5617424,12z/data=!3m1!4b1!4m5!3m4!1s0x2dd62822063dc2fb:0x78879446481a4da2!8m2!3d-7.9666204!4d112.6326321"></script>
 
 
 </body>
