--- a/index.html
+++ b/index.html
@@ -86,9 +86,13 @@ body, html {
 <div class="w3-content w3-container w3-padding-64" id="about">
   <h3 class="w3-center">ABOUT ME</h3>
   <p class="w3-center"><em>Music Enthusiasm</em></p>
-  <p>We have created a fictional "personal" website/blog, and our fictional character is a hobby photographer. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa
-    qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+  <p>We have created a fictional "personal" website/blog, and our fictional character is a hobby photographer. Hi Fellas, I'm Dimas. A "weird" boy who's trying to socialize like a normal human being.
+Welcome to my page, my bullshit page and that will waste your time.
+On this pages I will tell and try to write what I think and what I feel about the music around me.
+Yooppps because I am also a music entusiasm and I have vintage tastes. I love anything vintage, from cassette, vinyl and Polaroid cameras to record players.
+There's something about their simplicity that I find appealing.
+There are no viewfinders, digital zoom, or image enhancements of any kind. It's just raw and real.
+K.... let's make this trash page to share and review everything about music and classic culture.</p>
   <div class="w3-row">
     <div class="w3-col m6 w3-center w3-padding-large">
       <p><b><i class="fa fa-user w3-margin-right"></i>My Name</b></p><br>
@@ -97,9 +101,13 @@ body, html {
 
     <!-- Hide this text on small devices -->
     <div class="w3-col m6 w3-hide-small w3-padding-large">
-      <p>Welcome to my website. I am lorem ipsum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
-        dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor
-        incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+      <p>Welcome to my website. Hi Fellas, I'm Dimas. A "weird" boy who's trying to socialize like a normal human being.
+Welcome to my page, my bullshit page and that will waste your time.
+On this pages I will tell and try to write what I think and what I feel about the music around me.
+Yooppps because I am also a music entusiasm and I have vintage tastes. I love anything vintage, from cassette, vinyl and Polaroid cameras to record players.
+There's something about their simplicity that I find appealing.
+There are no viewfinders, digital zoom, or image enhancements of any kind. It's just raw and real.
+K.... let's make this trash page to share and review everything about music and classic culture.</p>
     </div>
   </div>
   <p class="w3-large w3-center w3-padding-16">Im really good at:</p>
