--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@ body, html {
 <div class="w3-content w3-container w3-padding-64" id="about">
   <h3 class="w3-center">ABOUT ME</h3>
   <p class="w3-center"><em>Music Enthusiasm</em></p>
-  <p>We have created a fictional "personal" website/blog, and our fictional character is a hobby photographer. Hi Fellas, I'm Dimas. A "weird" boy who's trying to socialize like a normal human being.
+  <p>We have created a fictional "personal" website/blog, and our fictional character.. Hi Fellas, I'm Dimas. A "weird" boy who's trying to socialize like a normal human being.
 Welcome to my page, my bullshit page and that will waste your time.
 On this pages I will tell and try to write what I think and what I feel about the music around me.
 Yooppps because I am also a music entusiasm and I have vintage tastes. I love anything vintage, from cassette, vinyl and Polaroid cameras to record players.
